# AI-Hiring-Recommendation-Agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  analyzer.py  embeddings.py  main.py  matcher.py  models.py  outreach.py
data/: candidates.json
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CandidateCard.jsx  ConversationPanel.jsx  JobInput.jsx  Loader.jsx  PipelineSteps.jsx  ResultsList.jsx
tests/: test_analyzer.py
